# keyboard-sounds

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  copy-dlls.ps1
include/: Application.h  KeyboardHookManager.h  MciSoundPlayer.h  SFMLSoundPlayer.h  SoundManager.h  Utils.h
src/: Application.cpp  KeyboardHookManager.cpp  MciSoundPlayer.cpp  SFMLSoundPlayer.cpp  SoundManager.cpp  main.cpp
